hard-gists/7103585/run.log
=== Docker Run Log for 7103585 ===
Started at: Mi 29. Okt 17:00:42 CET 2025

[2025-10-29 17:00:43] START: Running container for 7103585
[2025-10-29 17:00:43] SUCCESS: Container d9b6e529351533d441582f5a0c41905ea85c28315478c57fc903ae9962eee61d started for 7103585
=== Container logs for 7103585 ===
  File "/snippet.py", line 18
    print '''
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7103585 ===
[2025-10-29 17:00:45] INFO: Container d9b6e529351533d441582f5a0c41905ea85c28315478c57fc903ae9962eee61d has stopped
